ACLOCAL_AMFLAGS = -I m4

SUBDIRS = public utils src jrdb check

EXTRA_DIST = example/AUTHORS \
	example/COPYING \
	example/ChangeLog \
	example/INSTALL \
	example/Makefile.am \
	example/NEWS \
	example/README \
	example/configure.ac \
	example/src/Makefile.am \
	example/src/js/.jshintrc \
	example/src/js/Gruntfile.js \
	example/src/js/Makefile.am \
	example/src/js/example.js \
	example/src/js/package.json \
	example/src/main.cpp
