ACLOCAL_AMFLAGS = -I m4

SUBDIRS = fix public utils src jrdb check contrib

EXTRA_DIST = example/AUTHORS \
	example/COPYING \
	example/ChangeLog \
	example/INSTALL \
	example/Makefile.am \
	example/NEWS \
	example/README \
	example/configure.ac \
	example/src/Makefile.am \
	example/src/js/.jshintrc \
	example/src/js/Gruntfile.js \
	example/src/js/Makefile.am \
	example/src/js/example.js \
	example/src/js/package.json \
	example/src/main.cpp \
	contrib \
	win/jsrdbg.rc \
	win/jsrdbg.sln \
	win/jsrdbg.vcxproj \
	win/resource.h \
	win/utils.vcxproj \
	win/utils.vcxproj.filters \
	utils/win-iconv \
	src/tcp_protocol_win32.cpp \
	src/tcp_protocol_win32.hpp \
	Commons.mk

